unpackaged/main/default/objects/Supplier_Machine__c/Supplier_Machine__c.object-meta.xml
<CustomObject>
    <label>Supplier Machine</label>
    <nameField>
        <label>Supplier Machine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Machines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>