unpackaged/main/default/objects/Supplier_Machine__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <label>Accuracy</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>