unpackaged/main/default/objects/Supplier_Machine__c/fields/Axes__c.field-meta.xml
<CustomField>
    <fullName>Axes__c</fullName>
    <label>Axes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>