unpackaged/main/default/objects/Supplier_Machine__c/fields/Diameter__c.field-meta.xml
<CustomField>
    <fullName>Diameter__c</fullName>
    <label>Diameter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>