unpackaged/main/default/objects/Supplier_Machine__c/fields/MachineID__c.field-meta.xml
<CustomField>
    <fullName>MachineID__c</fullName>
    <externalId>true</externalId>
    <label>Machine ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>