unpackaged/main/default/objects/Supplier_Machine__c/fields/MachineMake__c.field-meta.xml
<CustomField>
    <fullName>MachineMake__c</fullName>
    <label>Machine Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>