unpackaged/main/default/objects/Supplier_Machine__c/fields/MachineModel__c.field-meta.xml
<CustomField>
    <fullName>MachineModel__c</fullName>
    <label>Machine Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>