unpackaged/main/default/objects/Supplier_Machine__c/fields/MachineType__c.field-meta.xml
<CustomField>
    <fullName>MachineType__c</fullName>
    <label>Machine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Binder Jetting</fullName>
            </value>
            <value>
                <fullName>Carbon DLS</fullName>
            </value>
            <value>
                <fullName>CNC Horizontal Mill</fullName>
            </value>
            <value>
                <fullName>CNC Lathe</fullName>
            </value>
            <value>
                <fullName>CNC Vertical Mill</fullName>
            </value>
            <value>
                <fullName>Die Casting</fullName>
            </value>
            <value>
                <fullName>Direct Metal Laser Sintering</fullName>
            </value>
            <value>
                <fullName>Extrusion</fullName>
            </value>
            <value>
                <fullName>Fused Deposition Modeling</fullName>
            </value>
            <value>
                <fullName>Hole Popper EDM</fullName>
            </value>
            <value>
                <fullName>HP Multi-Jet Fusion</fullName>
            </value>
            <value>
                <fullName>Injection Molding</fullName>
            </value>
            <value>
                <fullName>Laser Cutter</fullName>
            </value>
            <value>
                <fullName>MultiJet</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Plasma Cutter</fullName>
            </value>
            <value>
                <fullName>PolyJet 3D Printing</fullName>
            </value>
            <value>
                <fullName>Ram EDM</fullName>
            </value>
            <value>
                <fullName>Selective Laser Sintering</fullName>
            </value>
            <value>
                <fullName>Sheet Metal</fullName>
            </value>
            <value>
                <fullName>Sheet Metal Brake</fullName>
            </value>
            <value>
                <fullName>Sheet Metal Punch</fullName>
            </value>
            <value>
                <fullName>Sheet Metal Shear</fullName>
            </value>
            <value>
                <fullName>Stamping</fullName>
            </value>
            <value>
                <fullName>Stereolithography</fullName>
            </value>
            <value>
                <fullName>Swiss Lathe</fullName>
            </value>
            <value>
                <fullName>Urethane Molding</fullName>
            </value>
            <value>
                <fullName>Water Jet Cutter</fullName>
            </value>
            <value>
                <fullName>Wire Electrical Discharge Machining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>