unpackaged/main/default/objects/Supplier_Machine__c/fields/PartnerID__c.field-meta.xml
<CustomField>
    <fullName>PartnerID__c</fullName>
    <label>Partner ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>