unpackaged/main/default/objects/Supplier_Machine__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>