unpackaged/main/default/objects/Supplier_Machine__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Supplier Machines</relationshipLabel>
    <relationshipName>Supplier_Machines</relationshipName>
    <type>Lookup</type>
</CustomField>