unpackaged/main/default/objects/Supplier_Machine__c/fields/XAxis__c.field-meta.xml
<CustomField>
    <fullName>XAxis__c</fullName>
    <label>X-Axis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>