unpackaged/main/default/objects/Supplier_Machine__c/fields/YAxis__c.field-meta.xml
<CustomField>
    <fullName>YAxis__c</fullName>
    <label>Y-Axis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>