unpackaged/main/default/objects/Supplier_Machine__c/fields/ZAxis__c.field-meta.xml
<CustomField>
    <fullName>ZAxis__c</fullName>
    <label>Z-Axis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>